--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,8 @@
+# Http
 PORT=3333
 
+# Database
 DATABASE_URL="postgresql://docker:docker@localhost:5432/letmeask"
+
+# Gemini
+GEMINI_API_KEY="AIzaSyCb-3MXMUek0FhmTGyee3VfAx-Njrbk_IY"
